--- a/aboutus.html
+++ b/aboutus.html
@@ -25,11 +25,11 @@
      
     </div>
     <ul class="nav navbar-nav">
-      <li id="top"><img src="favicon.ico/Globe l.png" height="80px"></li>
+      <li id="top"><img src="favicon.ico/icon.png" width="75px"></li>
       <li><a href="index.html"><h3 id="navtexto">Home</h3></a></li>
       <li><a href="properties.html"><h3 id="navtext">Properties</h3></a></li>
       <li><a href="contactus.html"><h3 id="navtext">Contact Us</h3></a></li>
-      <li><a href="aboutus.html"><h3 id="navtext">About Us</h3></a></li>
+      <li class="active"><a href="aboutus.html"><h3 id="navtext">About Us</h3></a></li>
       <li><a href="gettingstarted.html"><h3 id="navtext">Getting Started</h3></a></li>
       <li><a href="rentvsbuy.html"><h3 id="navtext">Rent VS Buy</h3></a></li>
     </ul>
