--- a/properties.html
+++ b/properties.html
@@ -25,8 +25,7 @@
      
     </div>
     <ul class="nav navbar-nav">
-      <li id="top"><img src="favicon.ico/icon.png" width="75px"></li>
-      <li><a href="index.html"><h3 id="navtexto">Home</h3></a></li>
+      <li id="nav-list"><a href="index.html"><img class="navigation logo" src="favicon.ico/Globe Fin.png"></a></li>
       <li class="active"><a href="properties.html"><h3 id="navtext">Properties</h3></a></li>
       <li><a href="contactus.html"><h3 id="navtext">Contact Us</h3></a></li>
       <li><a href="aboutus.html"><h3 id="navtext">About Us</h3></a></li>
@@ -38,7 +37,7 @@
 </nav>
   
 
-
+<img class="bottom" src="favicon.ico/image-asset.jpg">
 
 
 
