--- a/rentvsbuy.html
+++ b/rentvsbuy.html
@@ -26,35 +26,25 @@
     </div>
     <ul class="nav navbar-nav">
       <li id="top"><img src="favicon.ico/icon.png" width="75px"></li>
-      <li><a href="index.html"><h3 id="navtexto">Home</h3></a></li>
+      <li class="active"><a href="index.html"><h3 id="navtexto">Home</h3></a></li>
       <li><a href="properties.html"><h3 id="navtext">Properties</h3></a></li>
       <li><a href="contactus.html"><h3 id="navtext">Contact Us</h3></a></li>
       <li><a href="aboutus.html"><h3 id="navtext">About Us</h3></a></li>
       <li><a href="gettingstarted.html"><h3 id="navtext">Getting Started</h3></a></li>
-      <li class="active"><a href="rentvsbuy.html"><h3 id="navtext">Rent VS Buy</h3></a></li>
+      <li ><a href="rentvsbuy.html"><h3 id="navtext">Rent VS Buy</h3></a></li>
     </ul>
  
 </div>
 </nav>
-<div class="row divv">
-    <div class="column"><img id="top" src="favicon.ico/Globe l.png"><br>
-        <h2 id="titles"><b>We Believe in Better Quality</b></h2><br>
-        Felis imperdiet proin fermentum leo. Neque gravida in fermentum et. Molestie at elementum eu facilisis sed odio morbi quis commodo. Habitasse platea dictumst quisque sagittis purus sit. Vitae turpis massa sed elementum tempus. Eget nunc lobortis mattis aliquam. Nisi porta lorem mollis aliquam. Tellus orci ac auctor augue mauris. A diam maecenas sed enim. Nec feugiat nisl pretium fusce id velit. Risus sed vulputate odio ut enim blandit. Et netus et malesuada fames ac turpis.
-    Commodo quis imperdiet massa tincidunt nunc pulvinar sapien. Magna fermentum iaculis eu non diam phasellus. Odio euismod lacinia at quis risus sed vulputate. </p><br>
-    
-    </div>
-    
-    <div class="column">
-        <h2 id="titles"><b>We Believe in Better Quality</b></h2><br>
-        Felis imperdiet proin fermentum leo. Neque gravida in fermentum et. Molestie at elementum eu facilisis sed odio morbi quis commodo. Habitasse platea dictumst quisque sagittis purus sit. Vitae turpis massa sed elementum tempus. Eget nunc lobortis mattis aliquam. Nisi porta lorem mollis aliquam. Tellus orci ac auctor augue mauris. A diam maecenas sed enim. Nec feugiat nisl pretium fusce id velit. Risus sed vulputate odio ut enim blandit. Et netus et malesuada fames ac turpis.
-    Commodo quis imperdiet massa tincidunt nunc pulvinar sapien. Magna fermentum iaculis eu non diam phasellus. Odio euismod lacinia at quis risus sed vulputate. </p><br>
-    <br>
-    <h2 id="titles"><b>We Believe in Better Quality</b></h2><br>
-    Felis imperdiet proin fermentum leo. Neque gravida in fermentum et. Molestie at elementum eu facilisis sed odio morbi quis commodo. Habitasse platea dictumst quisque sagittis purus sit. Vitae turpis massa sed elementum tempus. Eget nunc lobortis mattis aliquam. Nisi porta lorem mollis aliquam. Tellus orci ac auctor augue mauris. A diam maecenas sed enim. Nec feugiat nisl pretium fusce id velit. Risus sed vulputate odio ut enim blandit. Et netus et malesuada fames ac turpis.
-    Commodo quis imperdiet massa tincidunt nunc pulvinar sapien. Magna fermentum iaculis eu non diam phasellus. Odio euismod lacinia at quis risus sed vulputate. </p><br>
-    <img class="bottom" src="favicon.ico/image-asset.jpg">
-    </div>
-  </div>
-
+<div class="navigation">
+  <p> <img class="logo-img" src="http://icons.iconarchive.com/icons/tatice/browsers/128/Google-Chrome-icon.png" alt="Logo">
+      <ul id="nav-list">
+          <li><a href="">Home</a></li>
+          <li><a href="">News</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">About</a></li>
+      </ul>
+  </p>        
+</div>
 </body>
 </html>
